libs/updraft_core/tests/snapshots/scenario__add_external_device_after_loaded_devices_uses_a_fresh_id.snap
---
source: libs/updraft_core/tests/scenario.rs
expression: mutation_effects(&effects)
---
open ExternalDeviceId([ID]) Tcp { host: "192.0.2.1", port: 10110 }
external devices [PublishedExternalDevice { device_id: ExternalDeviceId([ID]), config: ExternalDeviceConfig { enabled: true, spec: Tcp { host: "127.0.0.1", port: 4353 } } }, PublishedExternalDevice { device_id: ExternalDeviceId([ID]), config: ExternalDeviceConfig { enabled: false, spec: BluetoothSpp { address: "00:11:22:33:44:55", service_uuid: "00001101-0000-1000-8000-00805F9B34FB" } } }, PublishedExternalDevice { device_id: ExternalDeviceId([ID]), config: ExternalDeviceConfig { enabled: true, spec: Tcp { host: "192.0.2.1", port: 10110 } } }]
persist settings SettingsSnapshot { settings: Settings { locale: None }, external_devices: [ExternalDeviceConfig { enabled: true, spec: Tcp { host: "127.0.0.1", port: 4353 } }, ExternalDeviceConfig { enabled: false, spec: BluetoothSpp { address: "00:11:22:33:44:55", service_uuid: "00001101-0000-1000-8000-00805F9B34FB" } }, ExternalDeviceConfig { enabled: true, spec: Tcp { host: "192.0.2.1", port: 10110 } }] }
