libs/updraft_core/tests/snapshots/scenario__add_external_device_to_an_empty_list.snap
---
source: libs/updraft_core/tests/scenario.rs
expression: mutation_effects(&effects)
---
open ExternalDeviceId([ID]) Tcp { host: "127.0.0.1", port: 4353 }
external devices [PublishedExternalDevice { device_id: ExternalDeviceId([ID]), config: ExternalDeviceConfig { enabled: true, spec: Tcp { host: "127.0.0.1", port: 4353 } } }]
persist settings SettingsSnapshot { settings: Settings { locale: None, units: UnitSettings { altitude: Meters, distance: Kilometers, speed: KilometersPerHour, vertical_speed: MetersPerSecond } }, external_devices: [ExternalDeviceConfig { enabled: true, spec: Tcp { host: "127.0.0.1", port: 4353 } }] }
