libs/updraft_core/tests/snapshots/scenario__delete_external_device_does_not_close_a_disabled_device.snap
---
source: libs/updraft_core/tests/scenario.rs
expression: mutation_effects(&effects)
---
external devices []
persist settings SettingsSnapshot { settings: Settings { locale: None, units: UnitSettings { altitude: Meters, distance: Kilometers, speed: KilometersPerHour, vertical_speed: MetersPerSecond } }, external_devices: [] }
