libs/updraft_core/tests/snapshots/scenario__edit_external_device_tcp_to_bluetooth.snap
---
source: libs/updraft_core/tests/scenario.rs
expression: mutation_effects(&tcp_to_bluetooth)
---
close ExternalDeviceId([ID])
open ExternalDeviceId([ID]) BluetoothSpp { address: "00:11:22:33:44:55", service_uuid: 00001101-0000-1000-8000-00805f9b34fb }
external devices [PublishedExternalDevice { device_id: ExternalDeviceId([ID]), config: ExternalDeviceConfig { enabled: true, spec: BluetoothSpp { address: "00:11:22:33:44:55", service_uuid: 00001101-0000-1000-8000-00805f9b34fb } } }]
persist settings SettingsSnapshot { settings: Settings { locale: None, units: UnitSettings { altitude: Meters, distance: Kilometers, speed: KilometersPerHour, vertical_speed: MetersPerSecond } }, external_devices: [ExternalDeviceConfig { enabled: true, spec: BluetoothSpp { address: "00:11:22:33:44:55", service_uuid: 00001101-0000-1000-8000-00805f9b34fb } }] }
