libs/updraft_core/tests/snapshots/scenario__edit_external_device_updates_a_disabled_device_without_transport_effects.snap
---
source: libs/updraft_core/tests/scenario.rs
expression: mutation_effects(&effects)
---
external devices [PublishedExternalDevice { device_id: ExternalDeviceId([ID]), config: ExternalDeviceConfig { enabled: false, spec: Tcp { host: "192.0.2.1", port: 10110 } } }]
persist settings SettingsSnapshot { settings: Settings { locale: None, units: UnitSettings { altitude: Meters, distance: Kilometers, speed: KilometersPerHour, vertical_speed: MetersPerSecond } }, external_devices: [ExternalDeviceConfig { enabled: false, spec: Tcp { host: "192.0.2.1", port: 10110 } }] }
