libs/updraft_core/tests/snapshots/scenario__reorder_external_devices_publishes_and_persists_the_new_order.snap
---
source: libs/updraft_core/tests/scenario.rs
expression: mutation_effects(&effects)
---
external devices [PublishedExternalDevice { device_id: ExternalDeviceId([ID]), config: ExternalDeviceConfig { enabled: false, spec: BluetoothSpp { address: "00:11:22:33:44:55" } } }, PublishedExternalDevice { device_id: ExternalDeviceId([ID]), config: ExternalDeviceConfig { enabled: true, spec: Tcp { host: "127.0.0.1", port: 4353 } } }]
persist settings SettingsSnapshot { settings: Settings { locale: None }, external_devices: [ExternalDeviceConfig { enabled: false, spec: BluetoothSpp { address: "00:11:22:33:44:55" } }, ExternalDeviceConfig { enabled: true, spec: Tcp { host: "127.0.0.1", port: 4353 } }] }
