libs/updraft_core/tests/snapshots/scenario__replaying_a_flight_produces_a_stable_effect_stream.snap
---
source: libs/updraft_core/tests/scenario.rs
expression: "replay_fixture().join(\"\\n\")"
---
open ExternalDeviceId(1) Tcp { host: "127.0.0.1", port: 4353 }
instruments pos=50.82300,6.18600 track=270.00 gs=23.15 alt=none
instruments pos=50.82300,6.18600 track=270.00 gs=23.15 alt=200.0
instruments pos=50.82333,6.18667 track=271.00 gs=23.66 alt=200.0
instruments pos=50.82367,6.18733 track=272.00 gs=24.18 alt=200.0
