libs/updraft_core/tests/snapshots/scenario__set_external_device_enabled_disables_an_enabled_device.snap
---
source: libs/updraft_core/tests/scenario.rs
expression: mutation_effects(&effects)
---
close ExternalDeviceId([ID])
external devices [PublishedExternalDevice { device_id: ExternalDeviceId([ID]), config: ExternalDeviceConfig { enabled: false, spec: Tcp { host: "127.0.0.1", port: 4353 } } }]
persist settings SettingsSnapshot { settings: Settings { locale: None }, external_devices: [ExternalDeviceConfig { enabled: false, spec: Tcp { host: "127.0.0.1", port: 4353 } }] }
